--- a/.github/workflows/notify-d.yml
+++ b/.github/workflows/notify-d.yml
@@ -94,101 +94,4 @@ jobs:
               
             } else if (eventName === 'pull_request') {
               const pr = context.payload.pull_request;
-              const action = context.payload.action;
-              
-              title = `🔀 PR ${action}: ${pr.title}`;
-              body = `
-            ## 🟣 Pull Request ${action.charAt(0).toUpperCase() + action.slice(1)}
-            
-            **Repository:** \`${owner}/${repo}\`  
-            **PR #${pr.number}:** [${pr.title}](${pr.html_url})  
-            **Action:** ${action}  
-            **By:** @${actor}  
-            **From:** \`${pr.head.ref}\` → \`${pr.base.ref}\`
-            
-            ### 📝 Description:
-            ${pr.body || '_No description provided_'}
-            
-            ### 🔗 Links:
-            - [View Pull Request](${pr.html_url})
-            - [View Repository](https://github.com/${owner}/${repo})
-            
-            ---
-            🟣 **Operation Purple** - Automated notification from philosopher-ai-backend
-              `;
-              labels.push('pull-request', action);
-              
-            } else if (eventName === 'release') {
-              const release = context.payload.release;
-              
-              title = `🚀 Release published: ${release.name || release.tag_name}`;
-              body = `
-            ## 🟣 Release Published
-            
-            **Repository:** \`${owner}/${repo}\`  
-            **Release:** [${release.name || release.tag_name}](${release.html_url})  
-            **Tag:** \`${release.tag_name}\`  
-            **By:** @${actor}
-            
-            ### 📝 Release Notes:
-            ${release.body || '_No release notes provided_'}
-            
-            ### 🔗 Links:
-            - [View Release](${release.html_url})
-            - [Download Assets](${release.html_url})
-            - [View Repository](https://github.com/${owner}/${repo})
-            
-            ---
-            🟣 **Operation Purple** - Automated notification from philosopher-ai-backend
-              `;
-              labels.push('release');
-              
-            } else if (eventName === 'discussion') {
-              const discussion = context.payload.discussion;
-              const action = context.payload.action;
-              
-              title = `💬 Discussion ${action}: ${discussion.title}`;
-              body = `
-            ## 🟣 Discussion ${action.charAt(0).toUpperCase() + action.slice(1)}
-            
-            **Repository:** \`${owner}/${repo}\`  
-            **Discussion:** [${discussion.title}](${discussion.html_url})  
-            **Action:** ${action}  
-            **By:** @${actor}
-            
-            ### 📝 Content:
-            ${discussion.body || '_No content provided_'}
-            
-            ### 🔗 Links:
-            - [View Discussion](${discussion.html_url})
-            - [View Repository](https://github.com/${owner}/${repo})
-            
-            ---
-            🟣 **Operation Purple** - Automated notification from philosopher-ai-backend
-              `;
-              labels.push('discussion', action);
-            }
-            
-            // Create the issue in operation-purple-security repo
-            try {
-              const result = await github.rest.issues.create({
-                owner: 'overkor-tek',
-                repo: 'operation-purple-security',
-                title: title,
-                body: body,
-                labels: labels
-              });
-              
-              console.log(`✅ Notification created: ${result.data.html_url}`);
-            } catch (error) {
-              console.error('❌ Failed to create notification:', error.message);
-              core.setFailed(error.message);
-            }
-      
-      - name: 🟣 Report success
-        if: success()
-        run: |
-          echo "🟣 Operation Purple notification posted successfully!"
-          echo "📊 Event: ${{ github.event_name }}"
-          echo "👤 Actor: ${{ github.actor }}"
-          echo "📦 Repository: ${{ github.repository }}"
+              const act
